# Fast-SM9

./: CMakeLists.txt  HUST-SM9  README.md  SM9Test.c  automake.sh
cuda/: add.cu  add.cuh  sm9_cuda.cu  sm9_cuda.cuh  sm9_cuda_def.cuh
miracl/: CMakeLists.txt  miracl.h  mirdef.h  mraes.c  mralloc.c  mrarth0.c  mrarth1.c  mrarth2.c  mrarth3.c  mrbits.c  mrbrick.c  mrbuild.c  mrcore.c  mrcrt.c  mrcurve.c  mrdouble.c  mrebrick.c  mrec2m.c  mrecn2.c  mrfast.c  mrflash.c  mrflsh1.c  mrflsh2.c  mrflsh3.c  mrflsh4.c  mrfpe.c  mrfrnd.c  mrgcd.c  mrgcm.c  mrgf2m.c  mrio1.c  mrio2.c  mrjack.c  mrlucas.c  mrmonty.c  mrmuldv.c  mrpi.c  mrpower.c  mrprime.c  mrrand.c  (+14 more)
sm9/: sm3.c  sm3.h  sm4.c  sm4.h  sm9_algorithm.h  sm9_encrypt.c  sm9_keyexchange.c  sm9_setup.c  sm9_signature.c  sm9_utils.c  sm9_utils.h  sm_r-ate.c  smzzn12.c  smzzn12.h
